# xm125-radar-monitor

./: .gitignore  .pre-commit-config.yaml  ACCONEER_COLLABORATION_REQUEST.md  ACCONEER_STATUS_REPORT.md  CHANGELOG.md  Cadillac_F1_Enhanced_Pitch.md  Cadillac_F1_Sensor_System_Pitch.md  Cargo.toml  HARDWARE_TESTING_GUIDE.md  LICENSE  PROJECT_CONTEXT.md  PROJECT_SUMMARY.md  README.md  RUST_EMBEDDED_TEMPLATE.md  TESTING_GUIDE.md  TESTING_QUICK_REFERENCE.md  analyze_test_results.py  build-aarch64.sh  build-native.sh  crates.js  fifo_mode_example.rs  help.html  search-index.js  service_mode_example.rs  settings.html  src-files.js  test_presence.sh  test_suite.sh
.cargo/: config.toml
docs/: ACCONEER_COLLABORATION_REQUEST.md  DEVELOPMENT.md  HARDWARE_TESTING.md  HARDWARE_TEST_GUIDE.md  PROJECT_CONTEXT.md  RADAR_PERFORMANCE_ANALYSIS_REPORT.md  README.md  REFERENCE_POLICY.md  TECHNICAL_DATA_SUMMARY.md  TESTING_DOCUMENTATION_SUMMARY.md
scripts/: check-links.sh
search.index/: 000f054db554.js  0019038214fb.js  002754509e77.js  0052554a0877.js  00cfc34dfdfc.js  0112b3f41eb9.js  0123d740b7c0.js  012b869c2acd.js  015622b6b12b.js  01581649275b.js  01934403d6f7.js  01937266142f.js  019ddc28456e.js  01d4ca77240e.js  01f0ab6ceb9f.js  021502c5c56e.js  0258888a88f9.js  025eae38d11e.js  0270d1a90387.js  02a8f476b3b2.js  02dd4ea292b1.js  02fc479ae749.js  031899afbd2a.js  0324b61003fd.js  039b4c09c4e6.js  03a6a732565e.js  03bf168f828b.js  03dcfb7f3213.js  03e3a52148f9.js  040707d8fc8e.js  04291f074cae.js  04ecb0784fa7.js  054e1f57d6e1.js  055ec442b330.js  0572246d925a.js  0584c50d5c70.js  0588974cd2be.js  059c868fd9c9.js  063acf15958c.js  066e8499080f.js  (+674 more)
src/: cli.rs  commands.rs  config.rs  device_manager.rs  display.rs  error.rs  fifo.rs  fifo_exact.rs  firmware.rs  gpio.rs  handlers.rs  i2c.rs  main.rs  monitoring.rs  radar.rs
xm125_radar_monitor/: all.html  constant.APP_NAME.html  constant.VERSION.html  enum.DeviceMode.html  fn.check_control_script.html  fn.check_device_presence.html  fn.configure_detector.html  fn.configure_distance_range.html  fn.configure_presence_parameters.html  fn.configure_radar_from_cli.html  fn.debug_registers_if_connected.html  fn.main.html  (+24 more)
(+1001 files in other folders)
